unpackaged/objects/Case.object
<CustomObject>
  <fields>
    <fullName>Digital_Product__c</fullName>
    <inlineHelpText>Indicate the product and version number which you supported</inlineHelpText>
    <label>Digital Product</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Product_Line__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>3D Endo 1.0</fullName>
        </value>
        <value>
          <fullName>Aligners</fullName>
        </value>
        <value>
          <fullName>Astra</fullName>
        </value>
        <value>
          <fullName>Atlantis Editor</fullName>
        </value>
        <value>
          <fullName>AWO Website</fullName>
        </value>
        <value>
          <fullName>Case viewer</fullName>
        </value>
        <value>
          <fullName>CBCT &amp; 3rd Party Scans</fullName>
        </value>
        <value>
          <fullName>CDR DICOM</fullName>
        </value>
        <value>
          <fullName>CEREC</fullName>
        </value>
        <value>
          <fullName>CMP</fullName>
        </value>
        <value>
          <fullName>Computer</fullName>
        </value>
        <value>
          <fullName>Connect</fullName>
        </value>
        <value>
          <fullName>DBSWIN</fullName>
        </value>
        <value>
          <fullName>DentalPlanit</fullName>
        </value>
        <value>
          <fullName>Digital Lab</fullName>
        </value>
        <value>
          <fullName>Engineering</fullName>
        </value>
        <value>
          <fullName>File Catalyst</fullName>
        </value>
        <value>
          <fullName>Hardware components</fullName>
        </value>
        <value>
          <fullName>IDB</fullName>
        </value>
        <value>
          <fullName>Image Integration</fullName>
        </value>
        <value>
          <fullName>Implant Library</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
        </value>
        <value>
          <fullName>Installer Service</fullName>
        </value>
        <value>
          <fullName>ISM</fullName>
        </value>
        <value>
          <fullName>ISP Down</fullName>
        </value>
        <value>
          <fullName>ISUS Viewer</fullName>
        </value>
        <value>
          <fullName>Java</fullName>
        </value>
        <value>
          <fullName>Marketplace/Practice.com</fullName>
        </value>
        <value>
          <fullName>MELAG FTP Server</fullName>
        </value>
        <value>
          <fullName>MELAVIEW (MELATRACE)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Can be left empty. Please fill this in if there is a definite delivery date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ERP_Status_icon__c</fullName>
    <formula>Account.Movex_Status_indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Status icon</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Exchange_Order_Ship_Date__c</fullName>
    <label>Exchange Order Ship Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Exchange_Order_Value__c</fullName>
    <description>added 2 decimals per this request
https://dentsplysirona.my.salesforce.com/5000J00001GH99c</description>
    <label>Exchange Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>To Be Deleted - removed all access 2019-09-13, used for CRM Requests</description>
    <inlineHelpText>To Be Deleted - Set by CRM Team, a value in this field means there is a plan to fulfill this commitment by given date</inlineHelpText>
    <label>Expected Completion Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Field_Approvals_Completed__c</fullName>
    <inlineHelpText>This is populated by the Approval Process for calculating the KPI processing for Customer Service.</inlineHelpText>
    <label>Field Approvals Completed</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>FirstRealOwner_TF__c</fullName>
    <description>Technical field used to set the first real owner Id, used to assign email2case cases to their original owner instead to to the support user TFUS-000003410</description>
    <inlineHelpText>DO NOT ADD TO ANY LAYOUT</inlineHelpText>
    <label>First Real Owner</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>First_call_resolution__c</fullName>
    <label>First call resolution</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>FlowCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated automatically from the Service cloud flow to tag this case as created by the flow</description>
    <label>Flow Case</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>InboundEmailAfterCaseClosed__c</fullName>
    <description>This will be True if a closed case received a new email. TFUS-000001840</description>
    <formula>If ( LastInboundEmailDate__c &gt;  ClosedDate ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbound Email After Case Closed</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>InternalEmail2Case__c</fullName>
    <description>TFUS-000003101 , Used to prevent sending email notifications when the email2case originated from a dentsplysirona internal email or Salesforce notification</description>
    <formula>IF(CONTAINS(SuppliedEmail,"dentsply") || CONTAINS(SuppliedEmail,"salesforce")|| CONTAINS(SuppliedEmail,"noreply") || CONTAINS(SuppliedEmail,"no-reply")|| CONTAINS(SuppliedEmail,"wellspect")|| CONTAINS(SuppliedEmail,"zhermack")|| CONTAINS(SuppliedEmail,"microsoft"),"True","False")</formula>
    <label>Internal Email2Case</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Internal_Comment__c</fullName>
    <inlineHelpText>Visible only to the  Global CRM Team, use to add internal comments that shouldn't be shared with CRM users.</inlineHelpText>
    <label>Internal Comment</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LastEmailType__c</fullName>
    <description>Reflects the type of last Email Message related to this case. Updated through the EmailMessage default process. TFUS-000001840</description>
    <label>Last Email Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Inbound</fullName>
        </value>
        <value>
          <fullName>Outbound</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>LastInboundEmailDate__c</fullName>
    <description>The date/time of the last incoming email. TFUS-000001840</description>
    <inlineHelpText>The date/time of the last incoming email</inlineHelpText>
    <label>Last Inbound Email Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Last_CSat__c</fullName>
    <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about our customer service.</inlineHelpText>
    <label>Last CSat</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Last_Csat_Value__c</fullName>
    <description>Last customer satisfaction value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and it represents his overall satisfaction about our customer service.</inlineHelpText>
    <label>Last Csat Value</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Last_NPS__c</fullName>
    <description>Last Net Promoter Score value from the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>This information is coming from the last survey we sent to the contact and reflects the contact willingness to recommend us to a peer. The score is from 1 to 10 and it means: The customer is: from 0-6 a Detractor, from 7-8 Passive, from 9-10 a Promoter.</inlineHelpText>
    <label>Last NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Last_Survey_Update__c</fullName>
    <description>Date of the last survey. Filled automatically by the mapping of getfeedback.</description>
    <inlineHelpText>Date of the last survey sent to the customer</inlineHelpText>
    <label>Last Survey Update</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Latest_Comments_Change_on__c</fullName>
    <description>to be populated with the date/time of the latest changes on Comments, this helps to update the last modified date on the case

don't add to the layout</description>
    <label>Latest Comments Change on</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Lot_Number__c</fullName>
    <description>Used to fill in the Lot Number related to a Service Feedback case.</description>
    <label>Lot Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>MD_Legacy_ID__c</fullName>
    <formula>Account.MD_ERP_Legacy_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Materialise Legacy ID (SoftAdmin)</inlineHelpText>
    <label>MD Legacy ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Main_SBU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main SBU</label>
    <referenceTo>SBU_Information__c</referenceTo>
    <relationshipLabel>CRM Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Movex__c</fullName>
    <formula>If(Source_Record__c !="", Source_Record__r.Customer_Id__c,Account.Movex__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Multiple_Articles__c</fullName>
    <formula>HYPERLINK("/flow/Multiple_Articles_in_Cases?RelatedCase="&amp;Id, "Click Here")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Articles</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>My_Case__c</fullName>
    <description>Help field to filter my cases based on different criteria - CRM Requests</description>
    <formula>If( ($User.Id = CRM_Analyst__c ||   $User.Id =  Owner:User.Id ), "True","False")</formula>
    <label>My Case?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>NA_case_edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field that get checked after a case has been approved in US.
Then we have a validation rule to allow only CS to edit the case</description>
    <label>NA: case edit</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>New_or_Replacement_Order__c</fullName>
    <label>New or Replacement Order</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Next_Review_Date__c</fullName>
    <inlineHelpText>Set by CRM Team when to look at the request again, if not possible to close the Case directly</inlineHelpText>
    <label>Next Review Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>No_Action_Age__c</fullName>
    <formula>IF(DATEVALUE(NOW()) = DATEVALUE(LastModifiedDate),  
(NOW()- LastModifiedDate) * 24,  
((CASE(MOD(DATEVALUE(LastModifiedDate) - DATE(1985,6,24),7),  
0 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),  
1 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),  
2 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),  
3 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),  
4 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),  
5 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),  
6 , CASE( MOD(DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),  
999)  
+ (FLOOR((DATEVALUE(NOW()) - DATEVALUE(LastModifiedDate))/7)*5)  
- 2) * 9)  
+  
MAX((  
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(LastModifiedDate))) &amp; "-" &amp; TEXT(MONTH(DATEVALUE(LastModifiedDate))) &amp; "-" &amp; TEXT(DAY(DATEVALUE(LastModifiedDate))) &amp; " 08:00:00am") - LastModifiedDate + 1) * 24, 0))  
+  
MAX((NOW() -  
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(NOW()))) &amp; "-" &amp; TEXT(MONTH(DATEVALUE(NOW()))) &amp; "-" &amp; TEXT(DAY(DATEVALUE(NOW()))) &amp; " 16:00:00pm")) * 24, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Action Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Objects_missing__c</fullName>
    <formula>IF(
(ContactId='' &amp;&amp; SuppliedEmail != null &amp;&amp; NOT(Contains(SuppliedEmail,'dentsplysirona.com'))&amp;&amp; NOT(Contains(SuppliedEmail,'misimplants.com'))&amp;&amp; NOT(Contains(SuppliedEmail,'zhermack.com'))&amp;&amp; NOT(Contains(SuppliedEmail,'heartland.com'))) || (AccountId='' &amp;&amp; SuppliedEmail != null &amp;&amp; (Contains(SuppliedEmail,'dentsplysirona.com')|| Contains(SuppliedEmail,'misimplants.com')|| Contains(SuppliedEmail,'zhermack.com')|| Contains(SuppliedEmail,'heartland.com'))), 'Contact', /*for e2c*/ 




If(ContactId='' &amp;&amp; text(Status)='New','hide flow','')) /*for not e2c*/</formula>
    <label>Objects missing</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Details__c</fullName>
    <formula>Case ( Order_System__c, "MOO", HYPERLINK("https://moomanagement.simplant.com/MOOMan/Admin/OrderOverview.aspx?SoftAdminOrderId="&amp;Order_Number__c, "Click Here"), "DP", HYPERLINK("https://www.dentalplanit.com/Admin/AdminCaseDetails.aspx?CaseId="&amp;Order_Number__c, "Click Here"),"Movex", HYPERLINK("http://a3.astratech.net/a3DirectStart.asp?COMPONENT=OpenCollector_Invoice_0_Collector&amp;view=A&amp;selectionbox_Invoiceno=&amp;selectionbox_Orderno="&amp;Order_Number__c&amp;"&amp;View=A", "Click Here"),"PWS",If (Account_Country__c="JP", HYPERLINK("http://pwsjp.astratech.net/Reports/CustomReports/CustomReportsViewer.aspx?SystemReportID=10&amp;ReportViewer=Flash&amp;MOOid="&amp;Order_Number__c, "Click Here"),HYPERLINK("http://pwsbeb.internal.dentsply.net/Reports/CustomReports/CustomReportsViewer.aspx?SystemReportID=10&amp;ReportViewer=Flash&amp;MOOid="&amp;Order_Number__c, "Click Here")) ,"" )</formula>
    <inlineHelpText>This link will direct you to the related order details if the Order Number is filled in correctly</inlineHelpText>
    <label>Order Details</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Order_Origin__c</fullName>
    <description>How did the customer sent the order

*Paper Form = Printed email, Fax, Sales rep</description>
    <inlineHelpText>How did the customer sent the order

*Paper Form = Printed email, Fax, Sales rep</inlineHelpText>
    <label>Order Origin</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Paper Form</fullName>
        </value>
        <value>
          <fullName>Phone</fullName>
        </value>
        <value>
          <fullName>E-Commerce</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_System__c</fullName>
    <description>Select the related order system, DentalPlanit (DP), Materialise Online Ordering (MOO), PWS, or Movex</description>
    <inlineHelpText>Select the related order system, DentalPlanit (DP), Materialise Online Ordering (MOO), PWS, AX, or Movex</inlineHelpText>
    <label>Order System</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>DP</fullName>
        </value>
        <value>
          <fullName>MOO</fullName>
        </value>
        <value>
          <fullName>Movex</fullName>
        </value>
        <value>
          <fullName>PWS</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Consignment Order</fullName>
        </value>
        <value>
          <fullName>Sample Order</fullName>
        </value>
        <value>
          <fullName>Literature Order</fullName>
        </value>
        <value>
          <fullName>Copy Invoice</fullName>
        </value>
        <value>
          <fullName>Rewards Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Original_Order_Date__c</fullName>
    <label>Original Order Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Overall_Approval_Status__c</fullName>
    <formula>IF( of_Article_Numbers__c=0,"No Items Added", IF( of_Approved_Article_Numbers__c &lt; of_Article_Numbers__c, "Not Fully Approved", IF(of_Approved_Article_Numbers__c = of_Article_Numbers__c, "Fully Approved", "For Review")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Approval Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>OwnerName_TF__c</fullName>
    <description>Used to tag the owner name in Text to make it searchable in the List views. TFUS-000003561</description>
    <label>Owner Name</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PO_Number__c</fullName>
    <description>Requested by the Control Tower</description>
    <inlineHelpText>If the order is placed in order system AX, use this field if you have the order system Movex PO number.</inlineHelpText>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Previous_Case_Owner__c</fullName>
    <label>Previous Case Owner</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Line__c</fullName>
    <description>The major business units for Dentsply Implants</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>SBU__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Accessories</fullName>
        </value>
        <value>
          <fullName>Adhesives</fullName>
        </value>
        <value>
          <fullName>Air Polishing Unit</fullName>
        </value>
        <value>
          <fullName>Alloy</fullName>
        </value>
        <value>
          <fullName>Amalgams</fullName>
        </value>
        <value>
          <fullName>Anesthesia</fullName>
        </value>
        <value>
          <fullName>Anesthetics</fullName>
        </value>
        <value>
          <fullName>Articulating SDR Flow</fullName>
        </value>
        <value>
          <fullName>ATL Abut</fullName>
        </value>
        <value>
          <fullName>ATL Suprastructures</fullName>
        </value>
        <value>
          <fullName>Attachments</fullName>
        </value>
        <value>
          <fullName>Azento</fullName>
        </value>
        <value>
          <fullName>Bands</fullName>
        </value>
        <value>
          <fullName>Bite Registration Material</fullName>
        </value>
        <value>
          <fullName>Bracket</fullName>
        </value>
        <value>
          <fullName>Burs</fullName>
        </value>
        <value>
          <fullName>Burs Gates</fullName>
        </value>
        <value>
          <fullName>CAD/CAM Materials</fullName>
        </value>
        <value>
          <fullName>CDR</fullName>
        </value>
        <value>
          <fullName>Cements</fullName>
        </value>
        <value>
          <fullName>Ceramic Furnaces</fullName>
        </value>
        <value>
          <fullName>Ceramics</fullName>
        </value>
        <value>
          <fullName>Clamps</fullName>
        </value>
        <value>
          <fullName>Composite Material</fullName>
        </value>
        <value>
          <fullName>Composites &amp; Flowables</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Core &amp; Post</fullName>
        </value>
        <value>
          <fullName>Couplers</fullName>
        </value>
        <value>
          <fullName>Crown forms</fullName>
        </value>
        <value>
          <fullName>Curing Lights</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Milestone</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>$Source.Related_Development_Project__c</field>
        <operation>equals</operation>
        <valueField>Deployment_Status_Phase__c.Project__c</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Deployment_Status_Phase__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Queue_assigned__c</fullName>
    <formula>Owner:Queue.Id != ""</formula>
    <label>Queue assigned</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Quick_Links2__c</fullName>
    <description>For CRM Requests</description>
    <formula>IF (  $User.ProfileId="00e20000001Ygwu" || $User.ProfileId="00e20000000kVxk", 
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid="&amp;CreatedById&amp;"&amp;save=1","Assign to Original Owner" ,"_self") &amp;" | "&amp; 
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn="&amp;$User.Full_Name__c&amp;"&amp;save=1","Take Ownership" ,"_self") 
,"")</formula>
    <label>Quick Links</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quick_Links__c</fullName>
    <description>Service Complaint Field to display the top page links</description>
    <formula>HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn="&amp;$User.Full_Name__c&amp;"&amp;save=1","Yourself" ,"_self")&amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid="&amp;CreatedById&amp;"&amp;save=1","Case Creator" ,"_self")&amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid="&amp;Previous_Case_Owner__c&amp;"&amp;save=1","Previous Owner" ,"_self")

&amp;""&amp;

IF ( Ispickval(SBU__c,"IMPL"), 
" | "&amp; HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G20000002uPoE&amp;save=1","ATL Abut 2nd" ,"_self") &amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G20000002uV5R&amp;save=1","ATL Supra 2nd" ,"_self") &amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G0J000003H1b0&amp;save=1","Azento Support 2nd" ,"_self")&amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G200000013cad&amp;save=1","Simplant 2nd" ,"_self") &amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G20000002uPo9&amp;save=1","Control Tower" ,"_self") &amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G20000002uPoJ&amp;save=1","Venlo Warehouse" ,"_self")

	,"")

&amp;""&amp;

IF ( Ispickval(Product_Line__c,"SureSmile"), 
" | "&amp; HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G6M000004GUcD&amp;save=1","SureSmile Global Support" ,"_self") &amp;" | "&amp;
HYPERLINK("/"&amp;Id&amp;"/a?retURL=%2F"&amp;Id&amp;"&amp;newOwn_lkid=00G6M000004GUby&amp;save=1","SureSmile Berlin Support" ,"_self") 
	,"")</formula>
    <label>Assign To (Quick Links)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main RCO (TBD)</label>
    <referenceTo>RCO_Information__c</referenceTo>
    <relationshipLabel>CRM Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Rebill_Order_Amount__c</fullName>
    <label>Rebill Order Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Rebill_Order_Number__c</fullName>
    <label>Rebill Order Number</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RelatedAccounts__c</fullName>
    <description>Number of Related Accounts to the case</description>
    <label>Related Accounts</label>
    <summaryForeignKey>CaseAccountRole__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Related_Deployment_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Deployment Project</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Project__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deployment</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CRM Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Related_Development_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Development Project</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Project__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Design &amp; Development</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CRM Requests</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>ReleaseDate__c</fullName>
    <description>CRM Request Release Date</description>
    <inlineHelpText>CRM Request Release Date</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Request_Sub_Type__c</fullName>
    <label>Request Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Request_Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account Receivables</fullName>
        </value>
        <value>
          <fullName>Accounts/Contacts</fullName>
        </value>
        <value>
          <fullName>Account Strategy</fullName>
        </value>
        <value>
          <fullName>Campaigns</fullName>
        </value>
        <value>
          <fullName>CFECalendar</fullName>
          <label>CFE/Calendar</label>
        </value>
        <value>
          <fullName>Chatter</fullName>
        </value>
        <value>
          <fullName>Contracts</fullName>
        </value>
        <value>
          <fullName>Credits and Rebills</fullName>
        </value>
        <value>
          <fullName>CRM Analyst Training</fullName>
        </value>
        <value>
          <fullName>Dealer Sell Out Data</fullName>
        </value>
        <value>
          <fullName>Documents</fullName>
        </value>
        <value>
          <fullName>End-User Training</fullName>
        </value>
        <value>
          <fullName>End-User Training Support</fullName>
        </value>
        <value>
          <fullName>ETM / Sharing Rules</fullName>
        </value>
        <value>
          <fullName>Field Access</fullName>
        </value>
        <value>
          <fullName>Go-Live Support</fullName>
        </value>
        <value>
          <fullName>IntegrationIssue</fullName>
          <label>Integration Issue</label>
        </value>
        <value>
          <fullName>LMS</fullName>
        </value>
        <value>
          <fullName>Mass Email</fullName>
        </value>
        <value>
          <fullName>Mass Update/Insert</fullName>
        </value>
        <value>
          <fullName>Merging Records</fullName>
        </value>
        <value>
          <fullName>New/Update Users</fullName>
        </value>
        <value>
          <fullName>Object Access</fullName>
        </value>
        <value>
          <fullName>Opportunities/Account Plans</fullName>
        </value>
        <value>
          <fullName>Order Management</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Page Layout</fullName>
        </value>
        <value>
          <fullName>Permission Set</fullName>
        </value>
        <value>
          <fullName>Picklist/Field Update</fullName>
        </value>
        <value>
          <fullName>Products/Price Books</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>General Question/Request for help</fullName>
        </value>
        <value>
          <fullName>Bug/Issue with existing functionality</fullName>
        </value>
        <value>
          <fullName>New Functionality/Feature (development)</fullName>
        </value>
        <value>
          <fullName>Enable existing functionality</fullName>
        </value>
        <value>
          <fullName>Training</fullName>
        </value>
        <value>
          <fullName>New Licenses</fullName>
        </value>
        <value>
          <fullName>Bug / General Question</fullName>
          <isActive>false</isActive>
          <label>Bug / General Question</label>
        </value>
        <value>
          <fullName>Data Management</fullName>
          <isActive>false</isActive>
          <label>Data Management</label>
        </value>
        <value>
          <fullName>Deployment Request</fullName>
          <isActive>false</isActive>
          <label>Deployment Request</label>
        </value>
        <value>
          <fullName>ETM &amp;  Acces Support</fullName>
          <isActive>false</isActive>
          <label>ETM &amp;  Access Support</label>
        </value>
        <value>
          <fullName>New APEX / Integration Request</fullName>
          <isActive>false</isActive>
          <label>New APEX / Integration Request</label>
        </value>
        <value>
          <fullName>New Function/Project</fullName>
          <isActive>false</isActive>
          <label>New Function/Project</label>
        </value>
        <value>
          <fullName>WAVE</fullName>
          <isActive>false</isActive>
          <label>WAVE</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Responsible_for_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible for Error</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Return_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>250</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Returned_Product_Received_Date__c</fullName>
    <label>Returned Product Received Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Returns_Processing_Time_Rec_to_Closed__c</fullName>
    <formula>ClosedDate - Returned_Product_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returns Proc.Time (Days): Rec. to Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SAPCreatedDate__c</fullName>
    <label>SiroForce Created Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>SAPId__c</fullName>
    <externalId>true</externalId>
    <label>SAP Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <description>Use only for Service Complaint</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>SBU</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>SLAStatusImage__c</fullName>
    <description>Used to display an image (Green,Orange or Red) flag, based on the SLA status</description>
    <formula>IMAGE
(
IF( ISPICKVAL(SLAStatus__c,"Red"),
"/img/samples/flag_red.gif",
IF( ISPICKVAL(SLAStatus__c,"Orange"),
"/img/samples/flag_yellow.gif",
"/img/samples/flag_green.gif"
)
),
""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
  </fields>
</CustomObject>